src/unpackaged/post/new - installation/07_heda_object_tracking/objects/hed__Program_Enrollment__c.object
<CustomObject>
    <description>A student Contact&apos;s enrollment in an academic program offered by a Department or School (the degree-granting Account type for the educational institution).</description>
	<label>Program Enrollment</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Program Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <description>The number of credits the student has successfully completed to date.</description>
        <inlineHelpText>The number of credits the student has successfully completed to date.</inlineHelpText>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date the student is scheduled to complete the Program.</description>
        <inlineHelpText>The date the student is scheduled to complete the Program.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Enrollment_Status__c</fullName>
        <description>The student&apos;s enrollment status, for example, full-time or half-time.</description>
        <inlineHelpText>The student&apos;s enrollment status, for example, full-time or half-time.</inlineHelpText>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Half-time</fullName>
                </value>
                <value>
                    <fullName>Less than half-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__GPA__c</fullName>
        <description>The student&apos;s current grade point average.</description>
        <inlineHelpText>The student&apos;s current grade point average.</inlineHelpText>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The date the student started, or is expected to start, this Program.</description>
        <inlineHelpText>The date the student started, or is expected to start, this Program.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Type_Option__c</fullName>
        <label>Fee Type Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rio_ed__Fee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type_Option</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Grade_Points__c</fullName>
        <inlineHelpText>Grade Points = Sum(Grade Points) achieved for each Course completed.</inlineHelpText>
        <label>Grade Points</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rio_ed__Program_Status__c</fullName>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	
</CustomObject>